Scrollbar fixes. None worked.

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,18 @@
 
 /* Material UI symbols from the index.html  */
 
-body::-webkit-scrollbar {
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+scrollinvis::-webkit-scrollbar {
   display: none;
+}
+scrollinvis {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow: auto;
 }
 
 .login-field {
